@@ -1,5 +1,9 @@
 2015-09-19  Julien Bect  <julien.bect@centralesupelec.fr>
 
+	@stk_dataframe/plot.m: Return vector of handles
+
+	* arrays/@stk_dataframe/plot.m: Return vector of handles
+
 	stk_plot_shadedci.m: Delete invisible area object, return a handle
 
 	* misc/plot/stk_plot_shadedci.m: Delete invisible area object and
